# rust-wasm-bindgen-window-or-worker-playground

./: .gitignore  Cargo.toml  README.md
pkg/: greet_from_worker.js  index.html  package.json  window_or_worker.d.ts  window_or_worker.js  window_or_worker_bg.wasm
src/: lib.rs
tests/: wasm.rs
