[package]
name = "window_or_worker"
version = "0.1.0"
authors = ["Rafał Michalski <royaltm75@gmail.com>"]
license = "UNLICENSE"
repository = "https://github.com/royaltm/rust-wasm-bindgen-window-or-worker-playground.git"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.28"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "ImageData",
  "Window",
  "WorkerGlobalScope",
  # "DedicatedWorkerGlobalScope"
]

[dev-dependencies]
wasm-bindgen-test = "0.2.28"
